[package]
name = "bon-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.4"
config = "0.15.5"
crossterm = { version = "0.28.1", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.31"
ratatui = "0.29.0"
sqlite = "0.36.1"
tokio = { version = "1.45.1", features = ["full"] }
